# Django-Assginment

./: fake_db.py  pyproject.toml
chapter_01/: .python-version
chapter_01/templates/: user_list.html
chapter_02/: README.md  db.sqlite3  pyproject.toml
chapter_02/config/: settings.py  urls.py
chapter_02/templates/: todo_list.html
chapter_03/: db.sqlite3
chapter_03/config/: settings.py  urls.py
chapter_03/templates/: todo_info.html  todo_list.html
chapter_03/todo/: views.py
chapter_03/users/: views.py
chapter_04/: db.sqlite3
chapter_04/config/: urls.py
chapter_04/templates/: todo_info.html  todo_list.html
chapter_04/todo/: views.py
chapter_05/: db.sqlite3
chapter_05/config/: settings.py  urls.py
chapter_05/templates/: todo_info.html  todo_list.html
chapter_05/todo/: cb_views.py  forms.py  models.py  urls.py
chapter_06/: db.sqlite3
chapter_06/config/: settings.py
chapter_06/templates/: todo_form.html  todo_info.html  todo_list.html
chapter_06/todo/: cb_views.py  forms.py  models.py
chapter_07/: db.sqlite3  main.py  pyproject.toml
chapter_07/config/: settings.py
chapter_07/templates/: todo_info.html  todo_list.html
chapter_07/templates/registration/: login.html
chapter_07/templates/todo/: base.html  todo_update.html
chapter_07/todo/: admin.py  cb_views.py  forms.py  models.py  urls.py
chapter_07/todo/migrations/: 0004_todo_completed_image_todo_thumbnail.py
chapter_08/: db.sqlite3
chapter_08/.secret_config/: secret.json
config/: settings.py  urls.py
templates/: user_info.html  user_list.html
(+30 files in other folders)
